test/typeerrors/Strategies/Duplicated3.type

       x :: a ; y :: b ;
  -------------------------
        x +++ y :: Int;;

constraints x
a == Int : "linkerkant moet een Int zijn"
constraints x
b == Int : "rechterkant moet een Int zijn";
